src/template/kubernetes-webapi.Genocs.MicroserviceLight.Template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service01
  labels:
    app: service01-webapi
spec:
  selector:
    matchLabels:
      app: service01-webapi
  replicas: 1
  template:
    metadata:
      labels:
        app: service01-webapi
    spec:
      containers:
        - name: service01-webapi
          image: genocs/service01:1.1.362
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service01
spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: service01-webapi
