src/template/kubernetes-worker.Genocs.MicroserviceLight.Template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service01
  labels:
    app: service01-busworker
spec:
  selector:
    matchLabels:
      app: service01-busworker
  replicas: 1
  template:
    metadata:
      labels:
        app: service01-busworker
    spec:
      containers:
        - name: service01-busworker
          image: genocsacr.azurecr.io/service01busworker:1.1.370
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service01
spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: service01-busworker
