src/template/kubernetes-ingress.Genocs.MicroserviceLight.Template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: service01
                port:
                  number: 80
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: service02
                port:
                  number: 80
